# mcp-dynamic-analyzer

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml  quick.yaml
docker/: Dockerfile.sandbox  seccomp-profile.json
docker/honeypot/: .env  .git-credentials
docker/honeypot/.aws/: credentials
docker/honeypot/.kube/: config
docker/honeypot/.ssh/: id_rsa
docker/profiles/: build.sh  common.sh
docker/profiles/node20/: Dockerfile
docker/profiles/node22/: Dockerfile
docker/profiles/polyglot/: Dockerfile
docker/profiles/python311/: Dockerfile
docker/profiles/python312/: Dockerfile
docs/: threat-payload-mapping.md
src/mcp_dynamic_analyzer/: __init__.py  cli.py  config.py  discovery.py  models.py  orchestrator.py
src/mcp_dynamic_analyzer/correlation/: __init__.py  engine.py  event_store.py
src/mcp_dynamic_analyzer/infrastructure/: __init__.py  bootstrap.py  honeypot.py  netmon.py  recipes.py  runtime_resolver.py  sandbox.py  sysmon.py
src/mcp_dynamic_analyzer/output/: __init__.py  exporter.py  reporter.py  scorer.py
src/mcp_dynamic_analyzer/payloads/: __init__.py  _response_filters.py  behavior_drift.py  command_injection.py  injection_patterns.py  nosql_injection.py  (+8 more)
tests/: conftest.py  test_bootstrap.py  test_config.py  test_correlation.py  test_event_store.py  test_models.py  test_orchestrator.py  test_proxy.py  test_response_filters.py  test_runtime_resolver.py  test_sandbox.py  test_tool_classification.py
tests/fixtures/: benign_server.py  malicious_server.py  vulnerable_server.py
tests/test_scanners/: test_all_scanners.py
(+16 files in other folders)
