[project]
name = "mcp-dynamic-analyzer"
version = "0.1.0"
description = "Dynamic security analysis framework for MCP servers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "docker>=7.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "mcp>=1.0",
    "aiofiles>=24.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
llm = ["anthropic>=0.40"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyright>=1.1",
]

[project.scripts]
mcp-dynamic-analyzer = "mcp_dynamic_analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_dynamic_analyzer"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"
